# mcp-server

./: .gitignore  LICENSE  README.md  mcp.json  pyproject.toml
src/: server.py  validate_credentials.py
tests/: test_server.py
