[project]
name = "mcp-server"
version = "0.1.0"
description = "Veryfi mcp server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
]


[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
